# mochi

./: .env.example  CLAUDE.md  ELEVENLABS_TTS.md  FULLSCREEN_AND_DEBUG.md  QUICKSTART.md  QUICK_TEST.md  README.md  SPEAKING_GUIDE.md  START_HERE.md  TROUBLESHOOT_VOICE.md  WEB_INTERFACE.md  pyproject.toml  settings.toml  verify_setup.sh
docs/: AI_COACH_INTEGRATION.md  AI_FORMATTING_FEATURE.md  MOCHI-SPEC.md  README.md
docs/archive/: CHANGES_SPLIT_VIEW.md  LATEST_UPDATES.md  PANEL_AND_TTS_UPDATE.md  WEB_VERSION_SUMMARY.md
docs/development/: COMMIT_SAFETY_CHECK.md  DEBUG_ELEVENLABS.md  TEST_ELEVENLABS.md  WHERE_ARE_LOGS.md
examples/problems/two_sum/: problem.yaml  solution.py  tests.yaml
mochi/: __init__.py  cli.py  server.py
mochi/ai/: __init__.py  coach.py  safeguards.py
mochi/core/: config.py  file_watcher.py  orchestrator.py  prompts.py
mochi/harness/: __init__.py  python_harness.py
mochi/io/: __init__.py  stt.py  tts.py  utils.py
mochi/schemas/: __init__.py  message.py  problem.py
mochi/static/: app.js  index.html
